added stack trace
Former-commit-id: 60cfc0619379ba710dee5f5c7dd085a035c80cd3 [formerly 4dd48a7fc8173d67883030b681419a38a64f85ea [formerly 6b0898271d75604b80f5839740fbeba3351f3c85]]
Former-commit-id: 85689e4b3e0724b6d6740cb8b4506afa5c425ea0
Former-commit-id: 85d95db07b2dc7ad4714f546bb04e63036310c43